test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/AssetAdministrationShell/invalidModelType.json.exception
Expected the model type 'AssetAdministrationShell', but got aCompletelyInvalidModelType at: assetAdministrationShells[0].modelType